# AgentDesktop

./: README.md
code/: .env.example  .gitignore  COMPUTER_VALIDATION.md  agent_config.yaml  flow.py  gateway.py  mcp_runner.py  mcp_server.py  memory.py  persistence.py  pyproject.toml  pyrightconfig.json  requirements.txt  run_ui.ps1  schemas.py  skills.py  test_mcp_server.py  ui_server.py
code/browser/: __init__.py  client.py  driver.py  skill.py
code/computer/: __init__.py  goal_utils.py  layer1_read.py  layer2a_hotkey.py  layer2b_ax.py  layer2b_electron.py  layer3_vision.py  skill.py
code/cua/: client.py  recording.py
code/prompts/: computer.md  planner.md
code/scripts/: probe_calc.py  probe_calc_resolve.py  setup_cua_driver.ps1  smoke_computer_hotkey.py  validate_computer_tasks.py
code/state/: index.faiss  index_ids.json  memory.json
code/state/sessions/s8-06516126/: graph.json  query.txt
code/state/sessions/s8-213ad2de/: graph.json  query.txt
code/state/sessions/s8-28ec5d82/: graph.json
code/state/sessions/s8-3b4d6b45/: graph.json  query.txt
code/state/sessions/s8-3fd482a0/: graph.json  query.txt
code/state/sessions/s8-47424acd/: graph.json  query.txt
code/state/sessions/s8-4a9ce740/: graph.json
code/state/sessions/s8-5b86026a/: graph.json  query.txt
code/state/sessions/s8-5de94c9f/: graph.json
code/state/sessions/s8-5fdd34d3/: graph.json
code/static/: index.html
code/tests/: test_computer_goals.py  test_computer_tools.py  test_computer_vision_windows.py  test_persistence.py  test_ui_server.py
code/ui/: presets.yaml
(+879 files in other folders)
